--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.15.2
+APScheduler==3.11.0
 blinker==1.9.0
 certifi==2025.6.15
 charset-normalizer==3.4.2
@@ -19,5 +20,6 @@ python-dotenv==1.1.0
 requests==2.32.4
 SQLAlchemy==2.0.40
 typing_extensions==4.13.2
+tzlocal==5.3.1
 urllib3==2.5.0
 Werkzeug==3.1.3
